Fix problem with .opinions section overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,10 +15,10 @@
     @media (min-width: 1200px) {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(2, minmax(auto, 1fr));
-        row-gap: 15%;
+        row-gap: 12%;
         column-gap: 6%;
 
-        padding: 10%;
+        padding: 10% 10% 0;
         min-height: 95vh;
     }
 }
@@ -53,11 +53,11 @@
 .rates {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(3, 60px);
     gap: 15px;
 
     @media (min-width: 1200px) {
-        gap: 20px
+        gap: 20px;
     }
 
     text-align: center;
@@ -124,14 +124,14 @@
         grid-area: 2/1/3/3;
         grid-template-columns: repeat(3, 1fr);
 
-        gap: 30px;
+        column-gap: 30px;
 
-        :nth-child(2) {
-            transform: translateY(10%);
+        :nth-child(1) {
+            transform: translateY(-20%);
         }
 
-        :nth-child(3) {
-            transform: translateY(20%);
+        :nth-child(2) {
+            transform: translateY(-10%);
         }
     }
 
